# veeone-widget-demo

./: .gitignore  CMakeLists.txt  main.cpp  veeone_adsr_widget.cpp  veeone_adsr_widget.hpp  veeone_filter_widget.cpp  veeone_filter_widget.hpp  veeone_wave_widget.cpp  veeone_wave_widget.hpp
synthv1/: synthv1_wave.cpp
